chore: replace deprecated usages