@@ -122,9 +122,11 @@ public abstract class ComponentTest {
     }
 
     protected Component createComponent() throws InstantiationException,
-            IllegalAccessException, ClassNotFoundException {
+            IllegalAccessException, ClassNotFoundException,
+            NoSuchMethodException, InvocationTargetException {
         String componentClass = getClass().getName().replace("Test", "");
-        return (Component) Class.forName(componentClass).newInstance();
+        return (Component) Class.forName(componentClass)
+                .getDeclaredConstructor().newInstance();
     }
 
     protected Component getComponent() {
